FIX 10th task file add align items

--- a/0x02-CSS_advanced/styles/10-style.css
+++ b/0x02-CSS_advanced/styles/10-style.css
@@ -52,7 +52,7 @@ a {
 }
 
 .section-header {
-  margin: auto;
+  align-items: var(--section-header-align);
 }
 
 .section-tagline {
